# system-configuration-rs

./: .gitmodules  Cargo.toml  generate_bindings.sh  generate_private_bindings.sh
sys-changer-app/: Cargo.toml
sys-changer-app/src/: dynstore.rs  interfaces.rs  main.rs  simpler_auth.rs  tweaking_config.rs  unix_sockets_comms.rs  zbus_service.rs
system-configuration/: Cargo.toml
system-configuration-sys/src/: lib.rs  network_configuration.rs  preferences_path.rs
system-configuration-sys/src/private/: mod.rs  network_configuration_private.rs  preferences_private.rs
system-configuration/examples/: network_set_names.rs
system-configuration/src/: base.rs  base2.rs  dynamic_store.rs  lib.rs  network_configuration.rs  network_reachability.rs  preferences.rs  status.rs  status_temp.rs
system-configuration/src/network_configuration/: bond_interface.rs  mod.rs  network_interface.rs  network_protocol.rs  network_service.rs  network_set.rs
system-configuration/src/network_configuration/private/: bridge_interface.rs
system-configuration/src/network_configuration2/: mod.rs  network_interface.rs  network_protocol.rs  network_service.rs  network_set.rs
system-configuration/src/network_configuration2/private/: bridge_interface.rs
system-configuration/src/private/: network_configuration_private.rs
system-configuration/system-configuration-proc/: Cargo.toml
