[package]
name = "sys-changer-app"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "sys-changer-app"

[dependencies]
core-foundation = "0.10.1"
system-configuration = { path = "../system-configuration", version = "0.6" }
system-configuration-sys = { path = "../system-configuration-sys", version = "0.6" }
security-framework = "3.4"
security-framework-sys = "2.15"
bitflags = "2"
mac_address = "1.1"
libc = "0.2"
