[package]
name = "sys-changer-app"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "sys-changer-app"

[dependencies]
core-foundation = "0.9"
system-configuration = { path = "../system-configuration", version = "0.6" }
system-configuration-sys = { path = "../system-configuration-sys", version = "0.6" }
security-framework = "2.11"
security-framework-sys = "2.11"
bitflags = "2"
mac_address = "1.1"
libc = "0.2"

extend = "1.2"