[package]
name = "sys-changer-app"
version = "0.0.1"
edition = "2021"
publish = false

[[bin]]
name = "sys-changer-app"

[dependencies]
core-foundation = "0.9"
system-configuration = { path = "../system-configuration", version = "0.6", features = ["private"] }
system-configuration-sys = { path = "../system-configuration-sys", version = "0.6", features=["private"] }
security-framework = "2.11"
security-framework-sys = "2.11"
mac_address = "1.1"
libc = "0.2"
extend = "1.2"

zbus = { version = "5.11", features = ["async-io", "tokio-vsock", "p2p"] }
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = "1.0"
event-listener = "5.4"
procspawn = "1.0"